--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -56,6 +56,7 @@ input {
 .video {
   grid-area: 1/1;
   max-width: 500px;
+  max-height: 500px;
   display: block;
 }
 
@@ -68,6 +69,11 @@ input {
   transition: opacity 0.5s ease;
 }
 
-.show-hint .search-hint {
+.show-hint .search-hint,
+.loading .spinner {
   opacity: 1;
+}
+
+.loading .search-hint {
+  opacity: 0;
 }
