--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -112,3 +112,13 @@ input {
   line-height: 1;
   height: 88px;
 }
+
+@media (max-width: 480px) {
+  body {
+    font-size: 18px;
+  }
+
+  .search-input {
+    font-size: 32px;
+  }
+}
